--- a/src/styles/AllInOneChange.css
+++ b/src/styles/AllInOneChange.css
@@ -1,25 +1,13 @@
 .AllInOneChange {
   margin: 1%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  color: #dfdfdf;
 }
 
 .info {
   max-width: 25%;
   margin: 1% 1% 1% 1%;
-  color: #dfdfdf;
-}
-.status_name {
-  flex-grow: initial;
-}
-
-.status_icon {
-}
-
-.flip_switch {
-}
-
-.position_changer {
 }
